--- a/Bio/index.html
+++ b/Bio/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About the Artist - Frans Lotz</title>
-        <link href = "home/styles.css" rel="stylesheet" type = "text/css"></link>
+        <title>Bio - Frans Lotz</title>
+        <link href = "styles.css" rel="stylesheet" type = "text/css"></link>
     </head>
     <body>
-        <h1>About the Artist - Frans Lotz</h1>
+        <header>
+            <h1><strong><i>Artwork of Frans Lotz</i></strong></h1>
+        <ul id=nav>
+            <li><a href="Galleries.html">Galleries</a.href></a></li>
+            <ul id=galleries>
+                <li><a href="Galleries/Tiny_Objects.html">Tiny Objects</a></li>
+                <li><a href="Galleries/Prints.html">Prints</a></li>
+            </ul>
+            <li><a href="Bio.html"><strong>Bio</strong>></a.href></li>
+            <li><a href="CV.html">CV</a.href></li>
+            <li><a href="Contact.html">Contact</a.href></li>
+        </ul></header><br />
+        <h1>Bio - Frans Lotz</h1>
     </body>
 </html>
